Actualizacion de la URL de la API

--- a/RasberryApp.csproj
+++ b/RasberryApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Iot.Device.Bindings" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NSModbus4" Version="4.0.2" />
     <PackageReference Include="NSModbus4.Serial" Version="4.0.2" />
